objects/gitObj__c/gitObj__c.object-meta.xml
<CustomObject>
    <description>github Assignment</description>
    <label>gitObj</label>
    <nameField>
        <label>gitObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>gitObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>