objects/gitObj__c/fields/branches__c.field-meta.xml
<CustomField>
    <fullName>branches__c</fullName>
    <label>branches</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Branch</fullName>
            </value>
            <value>
                <fullName>Second Branch</fullName>
            </value>
            <value>
                <fullName>Third Branch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>