objects/gitObj__c/fields/dateEnd__c.field-meta.xml
<CustomField>
    <fullName>dateEnd__c</fullName>
    <formula>Today() + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dateEnd</label>
    <type>Date</type>
</CustomField>