objects/gitObj__c/fields/information__c.field-meta.xml
<CustomField>
    <fullName>information__c</fullName>
    <label>information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Newspaper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>